@@ -13,6 +13,8 @@
  * Make repair no-op when RF=1 (CASSANDRA-7864)
 Merged from 1.2:
  * Don't index tombstones (CASSANDRA-7828)
+ * Allow concurrent writing of the same table in the same JVM using
+   CQLSSTableWriter (CASSANDRA-7463)
 
 
 2.0.10
